--- a/src/css/styled.css
+++ b/src/css/styled.css
@@ -21,6 +21,20 @@ h2{
     width: 800px;
     padding: 20px;
     border-bottom: solid 1px black;
+    position:relative;
+}
+
+.text_container{
+    content: '';
+    position: absolute;
+    top:55%;
+    left:50%;
+    translate: -50% -50%;
+    font-family: sans-serif;
+    font-size: 25px;
+}
+.text_item+.text_item{
+    margin-top:10px;
 }
 .container{
     margin-bottom:50px;
